--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,16 @@
 {
   "manifest_version": 3,
   "name": "Tab Suspender - Free Up Memory & Boost Performance (Open Source)",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Suspend tabs to save memory and CPU by replacing them with lightweight pages",
   "permissions": [
     "tabs",
     "storage",
-    "activeTab"
+    "activeTab", 
+    "contextMenus",
+    "downloads",
+    "tabGroups",
+    "alarms"
   ],
   "host_permissions": [
     "<all_urls>"
@@ -28,5 +32,6 @@
     "32": "icons/icon32.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  }
+  },
+  "options_page": "options/options.html"
 } 
